# kvmem-qw3

./: .gitignore  AGENTS.md  BUG_SUMMARY_large_ctx_garbage.md  CMakeLists.txt  DEVELOPMENT_LOG.md  README.md  evaluate_qa_deepseek.py
LICENSES/: llama.cpp.txt
docs/: DEVELOPMENT_LOG.md  KV_Memory_Paper.md  architecture.md  benchmark_suite.md  kvmem_implementation_notes.md  kvmem_tiered_io_design.md  kvmem_utility_eval_plan.md  lm_eval_harness.md  motivation_experiment_summary_en.md  mtp_paged_kv_optimization.md  openhands_swebench.md  paged_kv_continuous_batching_plan.md  paper.md  results.md
include/qw3/: device_backend.hpp  gguf.hpp  kvmem_store.hpp  nvme_kv_tier.hpp  pinned_kv_tier.hpp  qw3.hpp  qwen_config.hpp  tokenizer.hpp
scripts/: _benchmark_common.sh  attention_block_coverage.py  attention_step_kl_curve.py  attention_step_kl_group_plots.py  attention_step_kl_group_summary.py  benchmark_compare.sh  compare_with_llama_cpp.py  continuous_batching_benchmark.py  continuous_batching_regression.py  continuous_prefill_interleave_regression.py  fi_sweep.py  kv_fp8_full_sweep.sh  kv_q8_gsm8k.py  kv_q8_serve_compare.sh  kv_q8_utility.py  kv_q8_validate.py  kvmem_attention_stability.py  kvmem_cb_mtp_gate.py  kvmem_cb_mtp_perf.py  kvmem_e2e_regression.py  kvmem_mtp_compat.py  kvmem_mtp_latency.py  kvmem_mtp_tier_perf.py  kvmem_prefix_cache_verify.py  kvmem_session_profile.py  kvmem_tier_sweep.py  long_prompt_sweep.py  memory_sweep.py  mtp_acceptance_probe.py  mtp_compare_with_llama_cpp.py  mtp_continuous_delayed_admission.py  mtp_continuous_regression.py  mtp_throughput_benchmark.py  oai_client.py  openai_proxy_capture.py  opencode_capture_server.py  paged_kv_regression.py  prefix_cache_canary.py  prefix_cache_eviction.py  prefix_cache_latency_bench.py  (+21 more)
scripts/bench/: __init__.py  build_llama_server.py  config.py  llama_runner.py  orchestrator.py  qw3_runner.py  report.py  report_dynamic.py  report_only.py  run_bench.py  run_full_qw3_llama_1kout.sh  schema.py  utility_runner.py  vram.py
scripts/bench2/: README.md  __init__.py  client.py  driver.py  report.py  run.py  util.py
scripts/kvmem_eval/: client.py  dataset.py  grade.py  judge.py  prompt.py  run_eval.py
src/: backend.cpp  backend.hpp  cuda_helpers.cuh  engine.cpp  env_flags.hpp  fattn_vec_decode.cu  flashinfer_decode_adapter.cu  flashinfer_decode_adapter.hpp  flashinfer_prefill_adapter.cu  flashinfer_prefill_adapter.hpp  gated_delta_net.cu  gguf.cpp  kernel_legacy.cu  kernels_cuda.cu  kernels_cuda_stub.cpp  kvmem_session.hpp  kvmem_store.cpp  llama_cli_backend.cpp  mmq_q8.cu  mmvq_q8.cu  mock_backend.cpp  qw3_cli.cpp  qw3_inspect.cpp  qw3_server.cpp  qwen_config.cpp  qwen_executor.cpp  qwen_executor.hpp  qwen_native.cpp  qwen_native.hpp  qwen_native_backend.cpp  qwen_weights.cpp  qwen_weights.hpp  server.hpp  tokenizer.cpp
tests/: kvmem_assembly.cu  kvmem_store_test.cpp  mmq_parity.cu  nvme_kv_tier_test.cpp  pinned_kv_tier_test.cpp  rope_remap_batched_parity.cu  rope_remap_parity.cu  smoke.cpp  vmed_bench.cu
